finalize designs and start services
